--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  google_maps_flutter: ^2.7.1
+  google_maps_flutter: ^2.9.0
   geolocator: ^11.1.0
   custom_info_window: ^1.0.1
   get: ^4.6.6
@@ -45,6 +45,8 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   build_runner: ^2.4.13
+  table_calendar: ^3.1.2
+  google_maps_flutter_platform_interface: ^2.9.5
 
 dev_dependencies:
   flutter_test:
