--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   google_maps_flutter_platform_interface: ^2.9.5
   flutter_easyloading: ^3.0.5
   permission_handler: ^11.3.1
+  flutter_background_service: ^5.0.10
+  flutter_local_notifications: ^18.0.1
+  vibration: ^2.0.1
+  #awesome_notifications: ^0.10.0
 
 dev_dependencies:
   flutter_test:
