--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,13 @@
 buildscript {
-    ext.kotlin_version = '2.0.0'
+    ext.kotlin_version = '1.9.0'
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.3'
+        classpath 'com.android.tools.build:gradle:8.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.gms:google-services:4.4.2"
     }
 }
 
@@ -19,14 +18,22 @@ allprojects {
     }
 }
 
-
-
-rootProject.buildDir = "../build"
+rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
+    // Ensure namespace is set for all subprojects if not already set
+    afterEvaluate { subproject ->
+        if (subproject.hasProperty('android') && subproject.android.hasProperty('namespace')) {
+            // namespace already set, do nothing
+        } else if (subproject.name == "app") {
+            // The app module should already have namespace set in its build.gradle
+        } else if (subproject.hasProperty('android')) {
+            subproject.android.namespace = "vn.app.flutter_app.${subproject.name.replace('-', '_')}"
+        }
+    }
 }
 subprojects {
-    project.evaluationDependsOn(":app")
+    project.evaluationDependsOn(':app')
 }
 
 tasks.register("clean", Delete) {
