--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,16 @@ org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
 
+# Thêm các thuộc tính để khắc phục lỗi Firebase Messaging
+android.enableR8.fullMode=false
+android.enableR8=true
+
+# Tắt lint check để tránh lỗi build
+android.lintOptions.abortOnError=false
+
+# Tối ưu hóa build
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
+
